examples/test/testpolicy13313.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13313
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key39: value28
      key36: value11
      key20: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value31
          key30: value39
      podSelector:
        matchLabels:
          key7: value14
